Changes to new progress bar functionality: - fixed some issues with header bar height when progress bar is added - changed the way progress marker spacing is done - prevent standalone pages from being included when progress bar markers are used - amended some descriptions in xwd and added new option to allow % completed text to be changed in editor - minor change to css

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -721,6 +721,10 @@ button.ui-button-icon-only .ui-icon[class*=" fa-"] {
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
+#x_headerProgress.complete .pbBar:last-of-type, .pbBar.sub:last-of-type {
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
 #x_headerProgress .pbBar.sub {
 	position: absolute;
 }
